cli/tests/snapshots/main__formatting@setext-heading-2.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/setext-heading/setext-heading-2.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
## I'm a setext heading 1

-----------------------------------end input------------------------------------
|                                                                              | printWidth

