cli/tests/snapshots/main__formatting@setext-heading-multi-line-4.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/setext-heading/setext-heading-multi-line-4.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
I'm a setext heading 2 and I will will span two lines because I'm really long and
can't fit as an atx heading on a single line
------------

-----------------------------------end input------------------------------------
|                                                                              | printWidth

